connect monetization state to UI, allow bypass room size when monetized, explain monetization on entry modal

--- a/src/react-components/room/RoomEntryModal.scss
+++ b/src/react-components/room/RoomEntryModal.scss
@@ -50,3 +50,12 @@
     }
   }
 }
+
+:local(.webmon) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  svg {
+    flex-shrink: 0;
+  }
+}
