add premium scene section to homepage that searches reticulum for scenes with premium tag and allows direct room creation from them if monetized

--- a/src/react-components/home/HomePage.scss
+++ b/src/react-components/home/HomePage.scss
@@ -143,6 +143,25 @@
   font-size: 24px;
   margin-bottom: 16px;
 }
+
+:local(.scenes-heading) {
+  margin-left: 10px;
+  font-size: 24px;
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  svg {
+    margin-right: 5px;
+  }
+}
+
+:local(.scene-disabled) {
+  filter: blur(2px);
+  cursor: not-allowed !important;
+  a {
+    cursor: not-allowed !important;
+  }
+}
  
 :local(.rooms) {
   background-color: theme.$recessed-bg;
