separate local chat from immers posts in two different sidebars, local chat is once again ephemeral, add privacy level controls to immers chat

--- a/src/react-components/input/ToolbarButton.scss
+++ b/src/react-components/input/ToolbarButton.scss
@@ -42,6 +42,14 @@
   }
 }
 
+:local(.small) {
+  width: 48px;
+}
+
+:local(.small) :local(.icon-container) {
+  flex-shrink: 0;
+}
+
 :local(.large) :local(.icon-container) {
   width: 96px;
   height: 96px;
