--- a/src/react-components/room/ImmersReact.scss
+++ b/src/react-components/room/ImmersReact.scss
@@ -47,3 +47,17 @@
   padding-top: 5px;
   font-size: theme.$font-size-sm;
 }
+
+:local(.permissions) {
+  display: flex;
+  font-size: theme.$font-size-sm;
+  padding-left: 5px;
+
+  p {
+    padding-left: 5px;
+  }
+}
+
+:local(.permissions-button) {
+  padding-right: 5px;
+}
