Popup Auth & scope bugfixes - Change from redirect-based OAuth to a popup window - Update react UX to show login prompt and hide immers chat panel before login - Refactor auth & initialization flow to work with popup - Update scope upgrade flow to work with popup - Fix duplicate copies of scope accumulating in store - Fix home immer showing inaccurate scope upgrade notices - Change pass-your-handle-through-links to use hash because we no longer update the query during redirect - Prefill handle in login form when renewing expired token on remote immer

--- a/src/react-components/room/ImmersReact.scss
+++ b/src/react-components/room/ImmersReact.scss
@@ -6,6 +6,11 @@
   overflow: hidden;
 }
 
+:local(.button-icon) {
+  margin-right: 8px;
+  flex-shrink: 0;
+}
+
 :local(.image-icon) {
   width: 20px;
 }
